:art: Improve template/styles for main info and fix vertical alignment
Also updates thermometer icon for feels like temp from light to solid to better match

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -215,12 +215,8 @@ strong {
 }
 
 .current-temp {
-  padding-top: unset;
-
-  span {
-    font-size: 4em;
-    line-height: 1;
-  }
+  font-size: 4em;
+  line-height: 1;
 }
 
 .current-icon {
@@ -326,10 +322,8 @@ hr {
   }
 
   .current-temp {
-    span {
-      font-size: 2.5em;
-      line-height: 1;
-    }
+    font-size: 2.5em;
+    line-height: 1;
   }
 
   .current-icon {
